Adding plot of penguins

--- a/Tutorial5.qmd
+++ b/Tutorial5.qmd
@@ -4,3 +4,14 @@ author: "Jiwen"
 date: 2024/4/11
 format: html
 ---
+
+```{r}
+library(tidyverse)
+library(palmerpenguins)
+
+data(package = "palmerpenguins")
+
+ggplot(penguins, aes(x = bill_depth_mm, y = flipper_length_mm, color = species)) +
+    geom_point()
+```
+
